<resources>
    <string name="app_name">Event Planner</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Этот email адрес не действителен</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Пароль не подходит</string>
    <string name="error_field_required">Нужно заполнить поле</string>
    <string name="permission_rationale">"Нужно разрешение на контакты, чтобы заполнить email"</string>
    <string name="register">Регистрация</string>
    <string name="sing_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="account_alreadt_exists">Аккаунт с таким email адресом уже существует</string>
    <string name="error_on_registration">Ошибка при регистрации</string>
    <string name="error_sign_in">Ошибка при входе</string>
    <string name="no_network_connection">Проверьте подключение к интернету</string>
    <string name="private_cab">Личный кабинет</string>
    <string name="library">Библиотека</string>
    <string name="exit">Выйти</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="wanna_exit">Вы действительно хотите выйти из аккаунта?</string>
    <string name="can_not_authorize_with_google">На данный момент невозможно авторизоваться через систему Гугл</string>
    <string name="no_such_user">Такой пользователь не найден</string>
    <string name="title_activity_main_with_tabs">MainActivityWithTabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="notifications_admin_channel_name">Admin_notification_channel</string>
    <string name="can_not_load_data">Ошибка сети, Проверьте подключение к интернету</string>
    <string name="books_author">Автор: %s</string>
    <string name="books_year">Год выпуска: %s</string>
    <string name="books_language">Язык: %s</string>
    <string name="books_pages">Количество страниц: %d</string>
    <string name="books_country">Страна: %s</string>
    <string name="books_status">Статус: %s</string>
    <string name="get_book">Взять книгу</string>
    <string name="return_">Вернуть</string>
    <string name="return_book">Вернуть книгу</string>
    <string name="info_about_user">Информация о пользователе</string>
    <string name="unknown">Не известно</string>
    <string name="name">Имя</string>
    <string name="family_name">Фамилия</string>
    <string name="cancel">Отмена</string>
    <string name="book_is_currently_in">Находится у пользователя %s</string>
    <string name="fantasy">Фэнтези</string>
    <string name="detective">Детектив</string>
    <string name="fairy">Детские</string>
    <string name="history">Исторические</string>
    <string name="love">Любовные</string>

    <string name="toi_dinki">Той Динки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Схема проезда</string>
</resources>
